--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,10 +1,18 @@
 ---
-abstract: 'Catalyst based application'
+abstract: 'API do VotoLegal'
 author:
-  - 'Junior Moraes,,,'
+  - 'Junior Moraes <juniorfvox@gmail.com>'
 build_requires:
-  ExtUtils::MakeMaker: '6.36'
-  Test::More: '0.88'
+  Carp: '0'
+  Catalyst::Test: '0'
+  CatalystX::Eta::Test::REST: '0'
+  Data::Faker: '0'
+  Data::Printer: '0'
+  ExtUtils::MakeMaker: '0'
+  FindBin: '0'
+  JSON::MaybeXS: '0'
+  Test::More: '0'
+  lib: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
@@ -19,11 +27,58 @@ no_index:
     - t
     - inc
 requires:
-  Catalyst::Action::RenderView: '0'
-  Catalyst::Plugin::ConfigLoader: '0'
-  Catalyst::Plugin::Static::Simple: '0'
-  Catalyst::Runtime: '5.90104'
-  Config::General: '0'
+  Business::BR::CEP: '0'
+  Business::BR::CNPJ: '0'
+  Business::BR::CPF: '0'
+  Catalyst: '0'
+  Catalyst::Controller: '0'
+  Catalyst::Model::DBIC::Schema: '0'
+  Catalyst::Runtime: '5.80'
+  CatalystX::Eta::Controller::Order: '0'
+  CatalystX::Eta::Controller::REST: '0'
+  CatalystX::Eta::Controller::Search: '0'
+  Crypt::PRNG: '0'
+  DBD::Pg: '0'
+  DBIx::Class::Core: '0'
+  DBIx::Class::ResultSet: '0'
+  DBIx::Class::Schema: '0'
+  DDP: '0'
+  Data::Diver: '0'
+  Data::Manager: '0'
+  Data::Section::Simple: '0'
+  Data::Verifier::Field: '0'
+  Data::Verifier::Filters: '0'
+  Data::Verifier::Results: '0'
+  Data::Visitor: '0'
+  Data::Visitor::Callback: '0'
+  DateTime: '0'
+  DateTime::Format::Pg: '0'
+  DateTimeX::Easy: '0'
+  Email::Sender::Simple: '0'
+  Email::Sender::Transport::SMTP::TLS: '0'
+  Encode: '0'
+  Exporter: '0'
+  MIME::Lite: '0'
   Moose: '0'
+  Moose::Role: '0'
+  Moose::Util::TypeConstraints: '0'
+  MooseX::MarkAsMethods: '0'
+  MooseX::NonMoose: '0'
+  MooseX::Types: '0'
+  MooseX::Types::CNPJ: '0'
+  MooseX::Types::Common::String: '0'
+  MooseX::Types::DateTime::MoreCoercions: '0'
+  MooseX::Types::Email: '0'
+  MooseX::Types::Moose: '0'
+  MooseX::Types::Structured: '0'
+  Scalar::Util: '0'
+  Template: '0'
+  Template::Tiny: '0'
+  base: '0'
+  common::sense: '0'
   namespace::autoclean: '0'
-version: '0.01'
+  perl: '5.014002'
+  strict: '0'
+  utf8: '0'
+  warnings: '0'
+version: '20160622'
