cadastro completo do candidato.

--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,10 @@ format = {{ cldr('yyyyMMdd') }}
 
 [ManifestSkip]
 
+[Encoding]
+encoding = bytes
+match    = \.jpg$
+
 [AutoPrereqs]
 [Prereqs]
 DBD::Pg = 0
