--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name             = VotoLegal
 author           = Junior Moraes <juniorfvox@gmail.com>
 abstract         = API do VotoLegal
-license          = Perl_5
-copyright_holder = Junior Moraes
+license          = GPL_3
+copyright_holder = AppCivico
 copyright_year   = 2016
 
 [@Filter]
@@ -40,16 +40,13 @@ match    = \.jpg$
 DBD::Pg = 0
 
 [PruneFiles]
-;filename = README
 match = ^log/
 match = ^cover_db/
 
 [Run::BeforeBuild]
 run = rm -f Makefile.PL README
-;run = test -f Makefile.PL && rm Makefile.PL
 
 [Run::AfterBuild]
 run = cp %d/Makefile.PL %d/README ./
-;run = cp %d/README ./
 run = git status --porcelain | grep 'M Makefile.PL' && git commit -m 'auto-committed by Dist::Zilla' Makefile.PL || echo Makefile.PL up to date
 
