endpoint para Contato.

--- a/votolegal.conf
+++ b/votolegal.conf
@@ -21,3 +21,8 @@ name VotoLegal
     </default>
     </realms>
 </plugin>
+
+<email>
+    default_from    no-reply@votolegal.org
+    contact_to      contato@votolegal.org
+</email>
