incluindo a porta do smtp nas envs.

--- a/deploy/envs.sh.example
+++ b/deploy/envs.sh.example
@@ -10,3 +10,4 @@ export VOTOLEGAL_AWS_SECRET_KEY=""
 export VOTOLEGAL_SMTP_SERVER=""
 export VOTOLEGAL_SMTP_USER=""
 export VOTOLEGAL_SMTP_PASSWD=""
+export VOTOLEGAL_SMTP_PORT=""
