--- a/dist.ini
+++ b/dist.ini
@@ -37,7 +37,8 @@ match    = \.jpg$
 
 [AutoPrereqs]
 [Prereqs]
-DBD::Pg = 0
+DBD::Pg         = 0
+Daemon::Generic = 0
 
 [PruneFiles]
 match = ^log/
@@ -48,6 +49,5 @@ run = rm -f Makefile.PL README
 
 [Run::AfterBuild]
 run = cp %d/Makefile.PL %d/README ./
-run = git status --porcelain | grep 'M Makefile.PL' && git commit -m 'auto-committed by Dist::Zilla' Makefile.PL || echo Makefile.PL up to date
-run = git status --porcelain | grep 'M README' && git commit -m 'auto-committed by Dist::Zilla' README || echo README up to date
+run = ((git status --porcelain | grep 'M Makefile.PL' && git add Makefile.PL || git status --porcelain | grep 'M README' && git add README) && git commit -m 'auto-committed by Dist::Zilla') || echo Nothing to auto-commit.
 
