--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name             = VotoLegal
 author           = Junior Moraes <juniorfvox@gmail.com>
 abstract         = API do VotoLegal
-license          = GPL_3
+license          = AGPL_3
 copyright_holder = AppCivico
 copyright_year   = 2016
 
