separando configurações da database entre os ambientes de produção e desenvolvimento.

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -8,5 +8,9 @@
 
 [engine "pg"]
 	target = local
+
 [target "local"]
-   uri = db:pg://postgres:password@127.0.0.1:5432/votolegal_dev
+   uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_dev
+
+[target "prod"]
+   uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal
