--- a/votolegal.conf
+++ b/votolegal.conf
@@ -2,6 +2,28 @@
 # you want to use YAML like in old versions of Catalyst
 name VotoLegal
 
+<model DB>
+    <connect_info>
+        dsn dbi:Pg:dbname=votolegal;host=localhost;port=5432
+        AutoCommit 1
+        quote_char "\""
+        name_sep "."
+        user postgres
+        pg_enable_utf8 1
+    </connect_info>
+
+    <connect_info_test>
+        dsn dbi:Pg:dbname=votolegal_dev;host=127.0.0.1;port=5432
+        AutoCommit 1
+        quote_char "\""
+        name_sep "."
+        auto_savepoint 1
+        user postgres
+        pg_enable_utf8 1
+    </connect_info_test>
+
+</model>
+
 <plugin Authentication>
 	default_realm        	  default
 
@@ -21,6 +43,7 @@ name VotoLegal
     </default>
     </realms>
 </plugin>
+
 
 <email>
     default_from    no-reply@votolegal.org
