--- a/dist.ini
+++ b/dist.ini
@@ -39,7 +39,7 @@ match    = \.jpg$
 [Prereqs]
 DBD::Pg         = 0
 Daemon::Generic = 0
-Config::General = 0
+App::Sqitch     = 0
 
 [PruneFiles]
 match = ^log/
