Server::Starter nas deps.

--- a/dist.ini
+++ b/dist.ini
@@ -37,9 +37,11 @@ match    = \.jpg$
 
 [AutoPrereqs]
 [Prereqs]
-DBD::Pg         = 0
-Daemon::Generic = 0
-App::Sqitch     = 0
+App::Sqitch              = 0
+DBD::Pg                  = 0
+Daemon::Generic          = 0
+Server::Starter          = 0
+Net::Server::SS::PreFork = 0
 
 [PruneFiles]
 match = ^log/
