--- a/dist.ini
+++ b/dist.ini
@@ -37,11 +37,21 @@ match    = \.jpg$
 
 [AutoPrereqs]
 [Prereqs]
-App::Sqitch              = 0
-DBD::Pg                  = 0
-Daemon::Generic          = 0
-Server::Starter          = 0
-Net::Server::SS::PreFork = 0
+App::Sqitch                                  = 0
+Starman                                      = 0
+DBD::Pg                                      = 0
+Daemon::Generic                              = 0
+Server::Starter                              = 0
+Net::Server::SS::PreFork                     = 0
+Log::Log4perl                                = 0
+Catalyst::Authentication::Store::DBIx::Class = 0
+Catalyst::Action::RenderView                 = 0
+Catalyst::Plugin::Authorization::Roles       = 0
+Catalyst::Plugin::Static::Simple             = 0
+Catalyst::Plugin::ConfigLoader               = 0
+Catalyst::Plugin::Authentication             = 0
+DBIx::Class::TimeStamp                       = 0
+DBIx::Class::PassphraseColumn                = 0
 
 [PruneFiles]
 match = ^log/
