--- a/votolegal.conf.example
+++ b/votolegal.conf.example
@@ -60,3 +60,9 @@ name VotoLegal
     contact_to      contato@votolegal.org
 </sendmail>
 
+<slack>
+    webhook_url     https://hooks.slack.com/services/XXXXXXX/XXXXXXX/XXXXXXXXXXXXX
+    channel         \#votolegal
+    username        botlegal
+    icon_emoji      :robot_face:
+</slack>
