--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,7 @@ Catalyst::Plugin::Authorization::Roles       = 0
 Catalyst::Plugin::Static::Simple             = 0
 Catalyst::Plugin::ConfigLoader               = 0
 Catalyst::Plugin::Authentication             = 0
+Catalyst::TraitFor::Controller::reCAPTCHA    = 0
 DBIx::Class::TimeStamp                       = 0
 DBIx::Class::PassphraseColumn                = 0
 
