--- a/dist.ini
+++ b/dist.ini
@@ -54,6 +54,7 @@ Catalyst::TraitFor::Controller::reCAPTCHA    = 0
 DBIx::Class::TimeStamp                       = 0
 DBIx::Class::PassphraseColumn                = 0
 Mojo::Cloudflare                             = 0
+IO::Socket::SSL                              = 0
 
 [PruneFiles]
 match = ^log/
