--- a/dist.ini
+++ b/dist.ini
@@ -55,6 +55,7 @@ DBIx::Class::TimeStamp                       = 0
 DBIx::Class::PassphraseColumn                = 0
 Mojo::Cloudflare                             = 0
 IO::Socket::SSL                              = 0
+LWP::UserAgent::OfflineCache                 = 0
 
 [PruneFiles]
 match = ^log/
