crawlers com cache e retry.

--- a/dist.ini
+++ b/dist.ini
@@ -54,7 +54,7 @@ DBIx::Class::TimeStamp                       = 0
 DBIx::Class::PassphraseColumn                = 0
 Mojo::Cloudflare                             = 0
 IO::Socket::SSL                              = 0
-LWP::UserAgent::OfflineCache                 = 0
+LWP::UserAgent::Cached                       = 0
 
 [PruneFiles]
 match = ^log/
