adicionando Test::Compile para os tests.

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,7 @@ copyright_year   = 2016
 [Test::Perl::Critic]
 critic_config = perlcritic.rc
 
-;[Test::Compile]
+[Test::Compile]
 [Test::Kwalitee]
 [Test::DistManifest]
 [Test::EOL]
