Payment drivers config from env
VL20-4 #time 36m

--- a/envfile.example
+++ b/envfile.example
@@ -1,5 +1,23 @@
 export API_PORT="8080"
 export API_WORKERS="1"
 
-export SQITCH_DEPLOY=""
+export SQITCH_DEPLOY="local"
+
+export POSTGRESQL_HOST=""
+export POSTGRESQL_PORT=""
+export POSTGRESQL_DBNAME=""
+export POSTGRESQL_USER=""
+export POSTGRESQL_PASSWORD=""
+
+export AMAZON_S3_ACCESS_KEY=""
+export AMAZON_S3_SECRET_KEY=""
+export AMAZON_S3_MEDIA_BUCKET=""
+
+export VOTOLEGAL_CIELO_MERCHANT_ID=""
+export VOTOLEGAL_CIELO_MERCHANT_KEY=""
+export VOTOLEGAL_CIELO_CALLBACK_URL=""
+
+export VOTOLEGAL_PAGSEGURO_MERCHANT_ID=""
+export VOTOLEGAL_PAGSEGURO_MERCHANT_KEY=""
+export VOTOLEGAL_PAGSEGURO_CALLBACK_URL=""
 
