--- a/envfile.example
+++ b/envfile.example
@@ -9,6 +9,13 @@ export POSTGRESQL_DBNAME=""
 export POSTGRESQL_USER=""
 export POSTGRESQL_PASSWORD=""
 
+export EMAIL_SMTP_SERVER=""
+export EMAIL_SMTP_PORT=""
+export EMAIL_SMTP_USERNAME=""
+export EMAIL_SMTP_PASSWORD=""
+export EMAIL_DEFAULT_FROM=""
+export EMAIL_CONTACT_TO=""
+
 export AMAZON_S3_ACCESS_KEY=""
 export AMAZON_S3_SECRET_KEY=""
 export AMAZON_S3_MEDIA_BUCKET=""
@@ -20,4 +27,9 @@ export VOTOLEGAL_CIELO_CALLBACK_URL=""
 export VOTOLEGAL_PAGSEGURO_MERCHANT_ID=""
 export VOTOLEGAL_PAGSEGURO_MERCHANT_KEY=""
 export VOTOLEGAL_PAGSEGURO_CALLBACK_URL=""
+
+export SLACK_WEBHOOK_URL=""
+export SLACK_CHANNEL=""
+export SLACK_USERNAME=""
+export SLACK_ICON_EMOJI=""
 
