Update sqitch target
VL20-16 #time 1h

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -1,16 +1,17 @@
 [core]
-	engine = pg
-	top_dir = deploy_db
+    engine = pg
+    top_dir = deploy_db
 [deploy]
     verify = false
 [rebase]
     verify = false
 
 [engine "pg"]
-	target = local
+    target = development
 
-[target "local"]
+[target "development"]
    uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_dev
 
 [target "prod"]
-   uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal
+   uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_prod
+
