Add development persist environment
VL20-16 #time 20m

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -12,6 +12,9 @@
 [target "development"]
    uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_dev
 
+[target "development_persist"]
+   uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_dev_persist
+
 [target "prod"]
    uri = db:pg://postgres:no-password@127.0.0.1:5432/votolegal_prod
 
