Adding sandbox env

--- a/envfile.example
+++ b/envfile.example
@@ -27,6 +27,7 @@ export VOTOLEGAL_CIELO_CALLBACK_URL=""
 export VOTOLEGAL_PAGSEGURO_MERCHANT_ID=""
 export VOTOLEGAL_PAGSEGURO_MERCHANT_KEY=""
 export VOTOLEGAL_PAGSEGURO_CALLBACK_URL=""
+export VOTOLEGAL_PAGSEGURO_IS_SANDBOX=""
 
 export SLACK_WEBHOOK_URL=""
 export SLACK_CHANNEL=""
