Current dev state

--- a/envfile.example
+++ b/envfile.example
@@ -36,3 +36,7 @@ export SLACK_ICON_EMOJI=""
 
 export RECAPTCHA_PUBKEY=""
 export RECAPTCHA_PRIVKEY=""
+
+export CERTIFACE_API_URL=""
+export CERTIFACE_LOGIN=""
+export CERTIFACE_PASSWORD=""
