Adding Mandato Aberto integration

--- a/envfile.example
+++ b/envfile.example
@@ -44,3 +44,5 @@ export CERTIFACE_PASSWORD=""
 export IUGU_API_URL=""
 export IUGU_ACCOUNT_ID=""
 export IUGU_API_KEY=""
+
+export MANDATOABERTO_SECURITY_TOKEN=""
