--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -38,3 +38,6 @@ COPY votolegal.sh /etc/service/votolegal/run
 RUN mkdir /etc/service/votolegal-email
 COPY votolegal-email.sh /etc/service/votolegal-email/run
 
+RUN mkdir /etc/service/votolegal-blockchain
+COPY votolegal-blockchain.sh /etc/service/votolegal-email/run
+
