--- a/dist.ini
+++ b/dist.ini
@@ -67,5 +67,5 @@ run = rm -f Makefile.PL README
 
 [Run::AfterBuild]
 run = cp %d/Makefile.PL %d/README ./
+run = ( type 'ctags' >/dev/null && ctags -R ./lib ./script ) || exit 0
 run = ((git status --porcelain | grep 'M Makefile.PL' && git add Makefile.PL || git status --porcelain | grep 'M README' && git add README) && git commit -m 'auto-committed by Dist::Zilla') || echo Nothing to auto-commit.
-
