--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     postgresql-client \
     libfile-mimeinfo-perl \
+    libgd2-xpm-dev \
 && rm -rf /var/lib/apt/lists/* && apt-get clean
 
 USER app
